# webgpu-math

./: Cargo.toml  README.md
src/: main.rs  shader.wgsl  tests.rs
