[package]
name = "webgpu-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }
env_logger = "0.10.0"
flume = "0.11.0"
num-bigint = "0.4.4"
pollster = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
tinytemplate = "1.2.1"
wgpu = "0.18.0"
